--- a/apps/trolls_goals/public/css/style.css
+++ b/apps/trolls_goals/public/css/style.css
@@ -219,27 +219,68 @@ td { vertical-align: top; }
    ========================================================================== */
 
 multiselect .dropdown-menu {
-    padding-left: 5px; 
-    padding-right: 5px;
+  padding-left: 5px; 
+  padding-right: 5px;
 }
 
 multiselect .dropdown-menu > li > a {
-    padding: 3px 10px;
-    cursor :pointer;
+  padding: 3px 10px;
+  cursor :pointer;
 }
 
 .clickable {
   cursor: pointer;
 }
 
-/* Override some styles Bootstrap got wrong */
-.navbar {
-    min-height: 26px !important;
-    border-radius: 0 !important;
+th {
+  text-align: center;
 }
 
-.nav a {
-    cursor: pointer;
+#wrapper {
+  padding-left: 250px;
+  transition: all 0.4s ease 0s;
+}
+
+#sidebar-wrapper {
+  margin-left: -250px;
+  left: 250px;
+  width: 250px;
+  position: fixed;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1000;
+  transition: all 0.4s ease 0s;
+}
+
+#page-content-wrapper {
+  width: 100%;
+}
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width:767px) {
+  #wrapper {
+    padding-left: 0;
+  }
+  #sidebar-wrapper {
+    left: 0;
+  }
+  #wrapper.active {
+    position: relative;
+    left: 250px;
+  }
+  #wrapper.active #sidebar-wrapper {
+    left: 250px;
+    width: 250px;
+    transition: all 0.4s ease 0s;
+  }
 }
 
 /* ==|== media queries ======================================================
