--- a/apps/trolls_goals/views/index.ejs
+++ b/apps/trolls_goals/views/index.ejs
@@ -27,6 +27,7 @@
   <script src="/js/lib/angular-route.js"></script>
   <script src="/js/lib/angular-resource.js"></script>
   <script src="/js/lib/ui-bootstrap-tpls-0.10.0.js"></script>
+  <script src="/js/lib/custom-tooltip.js"></script>
 
   <script src="/js/main.js"></script>
   <script src="/js/filters.js"></script>
