--- a/apps/trolls_goals/views/index.ejs
+++ b/apps/trolls_goals/views/index.ejs
@@ -3,17 +3,17 @@
 <% include ../../../views/head_end_and_header %>
   <div ng-app="app" id="wrapper">
     <div id="sidebar-wrapper">
+      <img src="/logo_150.jpg" />
       <ul class="sidebar-nav">
         <navlink href="manage_areas" title="Manage Areas"></navlink>
         <navlink href="manage_domains" title="Manage Domains"></navlink>
-        <h3>Domains</h3>
-        <navlink href="domains/" title="All"></navlink>
+        <hr></hr>
+        <navlink href="domains/" title="All Areas"></navlink>
         <navlink ng-repeat="domain in domains" href="domains/{{domain.name}}" title="{{domain.name}}"></navlink>
       </ul>
     </div>
     <div id="page-content-wrapper">
       <div class="page-content">
-        <h1>Welcome to Troll's Goals!</h1>
         <div ng-view>
         </div>
       </div>
