--- a/apps/trolls_goals/views/index.ejs
+++ b/apps/trolls_goals/views/index.ejs
@@ -3,13 +3,15 @@
 <% include ../../../views/head_end_and_header %>
   <div ng-app="app" id="wrapper">
     <div id="sidebar-wrapper">
-      <img src="/logo_150.jpg" />
+      <a href="#/domains">
+        <img src="/logo_150.jpg" />
+      </a>
       <ul class="sidebar-nav">
+        <navlink href="domains" title="All Areas"></navlink>
+        <navlink ng-repeat="domain in domains" href="domains/{{domain.name}}" title="{{domain.name}}"></navlink>
+        <hr></hr>
         <navlink href="manage_areas" title="Manage Areas"></navlink>
         <navlink href="manage_domains" title="Manage Domains"></navlink>
-        <hr></hr>
-        <navlink href="domains/" title="All Areas"></navlink>
-        <navlink ng-repeat="domain in domains" href="domains/{{domain.name}}" title="{{domain.name}}"></navlink>
       </ul>
     </div>
     <div id="page-content-wrapper">
