--- a/apps/ayoshitake.com/views/index.ejs
+++ b/apps/ayoshitake.com/views/index.ejs
@@ -2,7 +2,11 @@
 
 <div role="main" class="main">
     <div class="slideshow">
-        <a class="portal first" href="<%= settings.protocol %>://wishingwell.<%= settings.base_url %>">
+        <a class="portal first" href="<%= settings.protocol %>://trollsgoals.<%= settings.base_url %>">
+            <img src="/img/trolls_goals.jpg" title="Troll's Goals" />
+        </a>
+
+        <a class="portal" href="<%= settings.protocol %>://wishingwell.<%= settings.base_url %>">
             <img src="/img/well_275.jpg" title="Wishing Well" />
         </a>
 
