Rename record description to details Replace record CRUD buttons' text with icons Add ctrl+enter hotkey for updating records

--- a/apps/trolls_goals/public/css/style.css
+++ b/apps/trolls_goals/public/css/style.css
@@ -286,6 +286,10 @@ th {
 .popover-inner textarea {
   width: 100%;
 }
+
+.popover-inner .btn-primary {
+  width: 132px;
+}
 /* START Tooltip styles */
 
 /* ==|== media queries ======================================================
